--- a/src/content/blog/2026InteractiveGSTemplate.mdx
+++ b/src/content/blog/2026InteractiveGSTemplate.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Hyperefficiency with Time"
+title: "2026's Interactive Google Sheet Template"
 description: "Every Minute Counts: Personal Time Audit"
-pubDate: "2025-09-17"
+pubDate: "2025-10-10"
 heroImage: "/blog-placeholder-3.jpg"
 ---
 
