--- a/src/content/blog/Inspirations.mdx
+++ b/src/content/blog/Inspirations.mdx
@@ -9,33 +9,32 @@ import Video from "../../components/Video.astro";
 import YouTubeLite from "../../components/YouTubeLite.astro";
 import Gallery from "../../components/Gallery.astro";
 
-{/* ======= AT A GLANCE (Thumbnail Summary) ======= */}
-<section class="glance">
-  <a href="#efficiency" class="card">
+<section className="glance">
+  <a href="#efficiency" className="card">
     <img src="/images/inspirations/efficiency-thumb.jpg" alt="Efficiency Is Everything" loading="lazy" />
     <span>Efficiency Is Everything</span>
   </a>
-  <a href="#phil" class="card">
+  <a href="#phil" className="card">
     <img src="/images/inspirations/phil-thumb.jpg" alt="Phil Von Stade video" loading="lazy" />
     <span>Phil Von Stade</span>
   </a>
-  <a href="#phelps" class="card">
+  <a href="#phelps" className="card">
     <img src="/images/inspirations/phelps-thumb.jpg" alt="Michael Phelps journaling" loading="lazy" />
     <span>Michael Phelps</span>
   </a>
-  <a href="#perfice" class="card">
+  <a href="#perfice" className="card">
     <img src="/images/inspirations/perfice-thumb.jpg" alt="Perfice app" loading="lazy" />
     <span>Perfice App</span>
   </a>
-  <a href="#feltron" class="card">
+  <a href="#feltron" className="card">
     <img src="/images/inspirations/feltron-thumb.jpg" alt="Feltron 2013 report" loading="lazy" />
     <span>Feltron 2013</span>
   </a>
-  <a href="#raptitude" class="card">
+  <a href="#raptitude" className="card">
     <img src="/images/inspirations/raptitude-thumb.jpg" alt="Raptitude blog" loading="lazy" />
     <span>Raptitude</span>
   </a>
-  <a href="#qs" class="card">
+  <a href="#qs" className="card">
     <img src="/images/inspirations/qs-thumb.jpg" alt="Quantified Self" loading="lazy" />
     <span>Quantified Self</span>
   </a>
@@ -67,8 +66,6 @@ import Gallery from "../../components/Gallery.astro";
   .card img { width: 100%; height: 140px; object-fit: cover; display: block; }
   .card span { display: block; text-align: center; padding: .5rem .6rem; color: inherit; font-weight: 600; }
 </style>
-
----
 
 ## ⚡ Efficiency Is Everything {#efficiency}
 
