--- a/src/content/blog/Inspirations.mdx
+++ b/src/content/blog/Inspirations.mdx
@@ -8,64 +8,19 @@ heroImage: "/images/inspirations-hero.jpg"
 import Video from "../../components/Video.astro";
 import YouTubeLite from "../../components/YouTubeLite.astro";
 import Gallery from "../../components/Gallery.astro";
+import Glance from "../../components/Glance.astro";
 
-<section className="glance">
-  <a href="#efficiency" className="card">
-    <img src="/images/inspirations/efficiency-thumb.jpg" alt="Efficiency Is Everything" loading="lazy" />
-    <span>Efficiency Is Everything</span>
-  </a>
-  <a href="#phil" className="card">
-    <img src="/images/inspirations/phil-thumb.jpg" alt="Phil Von Stade video" loading="lazy" />
-    <span>Phil Von Stade</span>
-  </a>
-  <a href="#phelps" className="card">
-    <img src="/images/inspirations/phelps-thumb.jpg" alt="Michael Phelps journaling" loading="lazy" />
-    <span>Michael Phelps</span>
-  </a>
-  <a href="#perfice" className="card">
-    <img src="/images/inspirations/perfice-thumb.jpg" alt="Perfice app" loading="lazy" />
-    <span>Perfice App</span>
-  </a>
-  <a href="#feltron" className="card">
-    <img src="/images/inspirations/feltron-thumb.jpg" alt="Feltron 2013 report" loading="lazy" />
-    <span>Feltron 2013</span>
-  </a>
-  <a href="#raptitude" className="card">
-    <img src="/images/inspirations/raptitude-thumb.jpg" alt="Raptitude blog" loading="lazy" />
-    <span>Raptitude</span>
-  </a>
-  <a href="#qs" className="card">
-    <img src="/images/inspirations/qs-thumb.jpg" alt="Quantified Self" loading="lazy" />
-    <span>Quantified Self</span>
-  </a>
-</section>
-
-<style>
-  .glance {
-    display: grid;
-    grid-template-columns: repeat(7, minmax(0, 1fr));
-    gap: .75rem;
-    margin: 1rem 0 2rem;
-  }
-  @media (max-width: 1400px) { .glance { grid-template-columns: repeat(5, 1fr); } }
-  @media (max-width: 1000px) { .glance { grid-template-columns: repeat(3, 1fr); } }
-  @media (max-width: 640px)  { .glance { grid-template-columns: repeat(2, 1fr); } }
-
-  .card {
-    display: grid;
-    grid-template-rows: auto 42px;
-    align-items: center;
-    text-decoration: none;
-    background: #fafafa;
-    border-radius: 14px;
-    overflow: hidden;
-    box-shadow: 0 4px 14px rgba(0,0,0,.06);
-    transition: transform .12s ease, box-shadow .12s ease, background .12s ease;
-  }
-  .card:hover { transform: translateY(-2px); box-shadow: 0 10px 28px rgba(0,0,0,.08); background: #fff; }
-  .card img { width: 100%; height: 140px; object-fit: cover; display: block; }
-  .card span { display: block; text-align: center; padding: .5rem .6rem; color: inherit; font-weight: 600; }
-</style>
+<Glance
+  items={[
+    { href: "#efficiency", src: "/images/inspirations/efficiency-thumb.jpg", label: "Efficiency Is Everything" },
+    { href: "#phil",       src: "/images/inspirations/phil-thumb.jpg",        label: "Phil Von Stade" },
+    { href: "#phelps",     src: "/images/inspirations/phelps-thumb.jpg",      label: "Michael Phelps" },
+    { href: "#perfice",    src: "/images/inspirations/perfice-thumb.jpg",     label: "Perfice App" },
+    { href: "#feltron",    src: "/images/inspirations/feltron-thumb.jpg",     label: "Feltron 2013" },
+    { href: "#raptitude",  src: "/images/inspirations/raptitude-thumb.jpg",   label: "Raptitude" },
+    { href: "#qs",         src: "/images/inspirations/qs-thumb.jpg",          label: "Quantified Self" },
+  ]}
+/>
 
 ## ⚡ Efficiency Is Everything {#efficiency}
 
@@ -115,7 +70,7 @@ You see your data face-first — not hidden behind tabs or UI layers.
 
 ## 🎨 Feltron’s 2013 Annual Report {#feltron}
 
-Nicholas Felton’s [2013 Life Report](https://feltron.com/FAR13.html) blew my mind.  
+Nicholas Felton’s [2013 Life Report](https://felton.com/FAR13.html) blew my mind.  
 The graphic design presentation of his data is beautiful — minimal, statistical, poetic.  
 
 Feel free to improve my systems in the **aesthetics department**.  
