--- a/src/content/blog/Inspirations.mdx
+++ b/src/content/blog/Inspirations.mdx
@@ -22,7 +22,7 @@ import Glance from "../../components/Glance.astro";
   ]}
 />
 
-## ⚡ Efficiency Is Everything {#efficiency}
+<h2 id="efficiency">⚡ Efficiency Is Everything</h2>
 
 [Efficiency Is Everything](https://efficiencyiseverything.com) was one of the first blogs that changed how I thought about time and optimization.  
 The guy tells you the cheapest foods per calorie, how much time you lose on simple tasks, and much more.  
@@ -38,7 +38,7 @@ This mindset **kindled my rush to save time**, since we all only have 24 hours a
 
 ---
 
-## 🎥 Phil Von Stade — The Original Life Logger {#phil}
+<h2 id="phil">🎥 Phil Von Stade — The Original Life Logger</h2>
 
 I thought I invented life-logging until I found this guy.  
 Here’s a [Phil Von Stade video](https://www.youtube.com/watch?v=DPwZ-5M6XKw) from over 16 years ago — he tracked his life before it was cool.
@@ -47,7 +47,7 @@ Here’s a [Phil Von Stade video](https://www.youtube.com/watch?v=DPwZ-5M6XKw) f
 
 ---
 
-## 🏊 Michael Phelps and Journaling {#phelps}
+<h2 id="phelps">🏊 Michael Phelps and Journaling</h2>
 
 Even athletes do it.  
 I read an [article about Michael Phelps](https://www.inc.com/jeff-haden/michael-phelps-journaling-habits.html) and realized he’s been journaling for years.  
@@ -59,7 +59,7 @@ You know what the Google Sheet system has over plain journaling?
 
 ---
 
-## 📱 Perfice — Track Your Life in an App {#perfice}
+<h2 id="perfice">📱 Perfice — Track Your Life in an App</h2>
 
 [Perfice](https://www.perfice.com) is a neat life-tracking app. I could build something like this, but for now I enjoy the **interactivity of my Google Sheets systems**.  
 You see your data face-first — not hidden behind tabs or UI layers.
@@ -68,9 +68,9 @@ You see your data face-first — not hidden behind tabs or UI layers.
 
 ---
 
-## 🎨 Feltron’s 2013 Annual Report {#feltron}
+<h2 id="feltron">🎨 Feltron’s 2013 Annual Report</h2>
 
-Nicholas Felton’s [2013 Life Report](https://felton.com/FAR13.html) blew my mind.  
+Nicholas Felton’s [2013 Life Report](https://feltron.com/FAR13.html) blew my mind.  
 The graphic design presentation of his data is beautiful — minimal, statistical, poetic.  
 
 Feel free to improve my systems in the **aesthetics department**.  
@@ -86,14 +86,14 @@ I haven’t delved into Looker Studio or Power BI yet, but that’s coming.
 
 ---
 
-## 🌱 Raptitude — Experiments in Living Better {#raptitude}
+<h2 id="raptitude">🌱 Raptitude — Experiments in Living Better</h2>
 
 [Raptitude](https://www.raptitude.com) inspired me to test self-improvement like experiments.  
 My blog isn’t just about data — it’s about **improving workflows, free time, and ultimately, life**.
 
 ---
 
-## 📊 Quantified Self Movement {#qs}
+<h2 id="qs">📊 Quantified Self Movement</h2>
 
 The [Quantified Self](https://quantifiedself.com) community shows what’s possible when people track everything.  
 It’s not just numbers; it’s **awareness turned into action**.
