--- a/src/content/blog/Inspirations.mdx
+++ b/src/content/blog/Inspirations.mdx
@@ -2,7 +2,7 @@
 title: "LifeLoggerz Inspirations"
 description: "The people, projects, and ideas that sparked my obsession with tracking life and optimizing every hour."
 pubDate: "2025-10-11"
-heroImage: "/images/inspirations-hero.jpg"
+heroImage: "/images/raw_data_sheet.png"
 tags: ["LifeLoggerz", "Inspiration", "Self-Improvement", "Data Tracking"]
 ---
 
