--- a/src/content/blog/LifeLoggerz-Q-and-A.mdx
+++ b/src/content/blog/LifeLoggerz-Q-and-A.mdx
@@ -4,7 +4,7 @@ pubDate: "2025-10-09"
 description: "Common questions about how I track my life daily using Google Sheets, why I do it, and what I’ve learned from years of logging data."
 tags: ["LifeLoggerz", "Google Sheets", "Data Tracking", "Self-Improvement"]
 updatedDate: "2025-10-09"   # optional
-heroImage: "/images/gs-organization-hero.jpg"  # optional
+heroImage: "/images/trophy_shelf.png"
 draft: false                 # optional
 ---
 
