--- a/src/content/blog/2026InteractiveGSTemplate.mdx
+++ b/src/content/blog/2026InteractiveGSTemplate.mdx
@@ -2,7 +2,7 @@
 title: "2026's Interactive Google Sheet Template"
 description: "Every Minute Counts: Personal Time Audit"
 pubDate: "2025-10-10"
-heroImage: "daily_snapshot.png"
+heroImage: "/images/daily_snapshot.png"
 ---
 
 What it do, what it do. It's ya boi, Lifeloggerz
