--- a/src/content/blog/efficiencyroutinehabits.mdx
+++ b/src/content/blog/efficiencyroutinehabits.mdx
@@ -2,7 +2,7 @@
 title: "Efficiency in My Routine and Habits"
 description: "Ponte a leer!"
 pubDate: "2025-09-19"
-heroImage: "/blog-placeholder-4.jpg"
+heroImage: "/images/composers.png"
 ---
 # Efficiency in My Routine and Habits
 
