--- a/src/content/blog/paperpilestoGS.mdx
+++ b/src/content/blog/paperpilestoGS.mdx
@@ -2,7 +2,7 @@
 title: "From Paper Piles to ChatGPT‑Powered Google Sheets — Welcome to LifeLoggerz 📊✨"
 description: "How I turned scattered notes into an automated habit-tracking, lab-logging, life-analyzing Google Sheets system — and how you can, too"
 pubDate: "2025-09-19"
-heroImage: "/images/world_book_map.png"
+heroImage: "/images/finances.png"
 ---
 
 
