--- a/src/content/blog/research-paper-fill-in-template.mdx
+++ b/src/content/blog/research-paper-fill-in-template.mdx
@@ -1,52 +1,112 @@
 ---
 title: "Research Paper Fill-In Template — How to Use It"
-description: "A guided walkthrough of the fields, with examples and tips for fast, consistent paper notes."
+description: "A step-by-step guide to mastering structured research paper notes using the LifeLoggerz Fill-In Template."
 pubDate: 2025-10-14
 draft: false
-tags: ["templates","research","workflow"]
+tags: ["templates", "research", "workflow", "organization"]
 heroImage: "/templates/covers/research-template-cover.png"
 ---
 
-import SectionHero from '../../components/SectionHero.astro';
+import SectionHero from "../../components/SectionHero.astro";
 
-<SectionHero src="/templates/covers/research-template-cover.png" alt="Research Paper Fill-In Template cover" />
+<SectionHero
+  src="/templates/covers/research-template-cover.png"
+  alt="Research Paper Fill-In Template cover"
+/>
 
-## What this template is
-A one-page structure for **fast, repeatable** research notes so you can skim later and still recover key details.
+---
 
-## Who it's for
-- Grad students and researchers summarizing many papers weekly  
-- Anyone building a unified literature database
+## 🧠 What It Is
 
-## Sections at a glance
-- **Header row** — citation, authors, venue, page count, date read  
-- **Abstract box** — 3–6 bullet summary of the *paper’s* abstract in your own words  
-- **Problem / Solution** — single-line statement each  
-- **Methods / Materials** — quick list; include test conditions  
-- **Standards / Metrics** — ASTM, ISO, variables, units  
-- **Results (icons row)** — heat-map or short bullets for each result bucket  
-- **Key takeaways** — 2–4 bullets you want to remember next month
+The **Research Paper Fill-In Template** is designed for fast, structured paper summaries that make your literature review **searchable, comparable, and visually memorable**.  
+Each box has a purpose — to help you extract *only what matters* from a paper, and to recognize patterns between different studies at a glance.
 
-## How to fill it (quick workflow)
-1. **Skim–scan:** title, abstract, figs, conclusion.  
-2. **Write 5 bullets** (no sentences).  
-3. **Log standards/metrics** you’ll reuse across papers.  
-4. **Capture 2–4 takeaways** (what would you tell past-you?).  
-5. **File link** (Zotero/Drive) + add your index ID.
+---
 
-## Example entry
-*(Swap with your own image later.)*
+## 🧩 Template Overview
 
-![Example filled-in page](/templates/examples/research-paper-example.png)
+Each page is structured around **information density** and **visual segmentation** — so every field contributes to a quick mental snapshot of the study.
 
-## Download
-- **PDF**: [/templates/Research-Paper-Fill-In-Template.pdf](/templates/Research-Paper-Fill-In-Template.pdf)  
-- **Word version** (if you add one later)
+### 🏷 Header Section
+- **Date & Session Info:** When and how long you read the paper.  
+- **Paper ID:** Your own indexing number (e.g., `#046`, `2023`).
+- **Title & Authors:** Copy exactly or abbreviate.
+- **Institution / Country / Page Count:** Adds quick bibliographic context.
 
-## Tips
-- Keep bullets terse; the template is a **compression** tool.  
-- Use the same abbreviations across papers.  
-- Snap a phone photo of handwritten pages and file it next to the PDF.
+### 📜 Abstract Box
+A short bullet-point summary of the **core claim** and **key findings**.  
+Use two colors: black/blue for neutral content, red for limitations or errors.
 
-## Changelog
-- **v1.0 (Oct 2025)** – Initial public release
+### ❓Problem / 💡Solution
+Summarize the research gap and its proposed fix in one short line each.  
+Think of these as your *elevator pitch* for the paper.
+
+### ⚙️ Procedures and Testing
+Condense methods (e.g., *“TGA 5–800 °C, XRD 5°/min”*) into shorthand notations.  
+Boxes include:
+- **Materials** and **Mix Designs**
+- **Testing Methods / Equipment**
+- **Variables** (independent & dependent)
+- **Key Standards (ASTM / ISO)**
+
+### 📈 Results & Figures
+Sketch or annotate key graphs.  
+Use icons to denote techniques — e.g., 🧪 TGA, ⚡ XRD, 📊 HOH, 🧱 Strength.
+
+### 🧩 Takeaways
+List the *three to five* insights or implications you want to remember.  
+For example:
+- Biochar increases Ca(OH)₂ conversion by 9%.  
+- FA + SEM synergizes → CO₂ uptake ↑.  
+- Retardation at low w/b but early strength recovery.  
+
+---
+
+## 🖋 Example Pages
+
+Below are two real examples — front and back — from an actual research summary sheet.
+
+<div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem;">
+  <img src="/templates/examples/rpfo-ex-1.png" alt="Research Paper Fill-In Template Example Front" style="max-width: 480px; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.08);" loading="lazy" />
+  <img src="/templates/examples/rpfo-ex-2.png" alt="Research Paper Fill-In Template Example Back" style="max-width: 480px; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.08);" loading="lazy" />
+</div>
+
+---
+
+## 🧭 How to Use It
+
+1. **Print a stack** or open in tablet note-app (GoodNotes / OneNote / iPadOS).  
+2. **Write fast** — don’t polish sentences. Focus on keywords, formulas, and relationships.  
+3. **Highlight key terms**:  
+   - Blue = facts  
+   - Red = problems  
+   - Black = structure  
+4. **File scanned pages** into your *Research Paper Archive* in Drive or your `Research_Log` sheet.  
+5. Link each entry with a matching ID in your Google Sheet database.
+
+---
+
+## 💾 Download the Template
+
+👉 [**Download Customizable Word Template**](/templates/Research-Paper-Fill-In-Template.docx){.btn .btn-primary target="_blank"}
+
+---
+
+## ✍️ Why It Works
+
+- Forces compression → you remember better.  
+- Visual layout activates spatial memory.  
+- Built for **pattern recognition** across many papers.  
+- Pairs perfectly with your **Google Sheets Research Archive**, allowing structured data extraction (Title, Materials, Standards, Results, etc.).
+
+---
+
+## 🧱 Related Templates
+- [To-Do List Template](/templates/Original-To-Do-List-Template.docx)  
+- [LifeLoggerz RD Sheet (coming soon)](/templates/)
+
+---
+
+## 🔧 Version History
+- **v1.0 (Oct 2025)** — Public release with PDF version and example pages.  
+- **v1.1 (Planned)** — Editable Word version + automatic linking to your Research Archive Sheet.
