--- a/src/content/blog/research-paper-fill-in-template.mdx
+++ b/src/content/blog/research-paper-fill-in-template.mdx
@@ -88,7 +88,7 @@ Below are two real examples — front and back — from an actual research summa
 
 ## 💾 Download the Template
 
-👉 [**Download Customizable Word Template**](/templates/Research-Paper-Fill-In-Template.docx){.btn .btn-primary target="_blank"}
+👉 <a href="/templates/Research-Paper-Fill-In-Template.docx" target="_blank" rel="noopener noreferrer" class="btn btn-primary"><strong>Download Customizable Word Template</strong></a>
 
 ---
 
