--- a/src/content/blog/research-paper-fill-in-template.mdx
+++ b/src/content/blog/research-paper-fill-in-template.mdx
@@ -66,16 +66,26 @@ For example:
 
 Below are two real examples — front and back — from an actual research summary sheet.
 
-<div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem;">
-  <img src="/templates/examples/rpfo-ex-1.png" alt="Research Paper Fill-In Template Example Front" style="max-width: 480px; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.08);" loading="lazy" />
-  <img src="/templates/examples/rpfo-ex-2.png" alt="Research Paper Fill-In Template Example Back" style="max-width: 480px; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.08);" loading="lazy" />
+<div style={{ display: "flex", flexWrap: "wrap", justifyContent: "center", gap: "1rem" }}>
+  <img
+    src="/templates/examples/rpfo-ex-1.png"
+    alt="Research Paper Fill-In Template Example Front"
+    style={{ maxWidth: "480px", borderRadius: "12px", boxShadow: "0 4px 16px rgba(0,0,0,0.08)" }}
+    loading="lazy"
+  />
+  <img
+    src="/templates/examples/rpfo-ex-2.png"
+    alt="Research Paper Fill-In Template Example Back"
+    style={{ maxWidth: "480px", borderRadius: "12px", boxShadow: "0 4px 16px rgba(0,0,0,0.08)" }}
+    loading="lazy"
+  />
 </div>
 
 ---
 
 ## 🧭 How to Use It
 
-1. **Print a stack** or open in tablet note-app (GoodNotes / OneNote / iPadOS).  
+1. **Print a stack** or open in a tablet note app (GoodNotes / OneNote / iPadOS).  
 2. **Write fast** — don’t polish sentences. Focus on keywords, formulas, and relationships.  
 3. **Highlight key terms**:  
    - Blue = facts  
@@ -88,7 +98,14 @@ Below are two real examples — front and back — from an actual research summa
 
 ## 💾 Download the Template
 
-👉 <a href="/templates/Research-Paper-Fill-In-Template.docx" target="_blank" rel="noopener noreferrer" class="btn btn-primary"><strong>Download Customizable Word Template</strong></a>
+<a
+  href="/templates/Research-Paper-Fill-In-Template.docx"
+  class="btn"
+  target="_blank"
+  rel="noopener"
+>
+  👉 Download Word Template
+</a>
 
 ---
 
@@ -102,8 +119,8 @@ Below are two real examples — front and back — from an actual research summa
 ---
 
 ## 🧱 Related Templates
-- [To-Do List Template](/templates/Original-To-Do-List-Template.docx)  
-- [LifeLoggerz RD Sheet (coming soon)](/templates/)
+- [Weekly To-Do List Template](/templates/Original-To-Do-List-Template.docx)  
+- [All Templates](/templates/)
 
 ---
 
