--- a/src/content/blog/research-paper-fill-in-template.mdx
+++ b/src/content/blog/research-paper-fill-in-template.mdx
@@ -5,6 +5,7 @@ pubDate: 2025-10-14
 draft: false
 tags: ["templates", "research", "workflow", "organization"]
 heroImage: "/templates/covers/research-template-cover.png"
+wide: true
 ---
 
 import SectionHero from "../../components/SectionHero.astro";
