--- a/src/content/blog/research-paper-fill-in-template.mdx
+++ b/src/content/blog/research-paper-fill-in-template.mdx
@@ -128,3 +128,11 @@ Below are two real examples — front and back — from an actual research summa
 ## 🔧 Version History
 - **v1.0 (Oct 2025)** — Public release with PDF version and example pages.  
 - **v1.1 (Planned)** — Editable Word version + automatic linking to your Research Archive Sheet.
+
+<style>
+  /* Widen the content for THIS post only */
+  .prose, .post, main article {
+    max-width: 1100px !important; /* tweak to taste */
+  }
+</style>
+
