--- a/src/content/blog/research-paper-fill-in-template.mdx
+++ b/src/content/blog/research-paper-fill-in-template.mdx
@@ -65,30 +65,20 @@ For example:
 
 ## 🖋 Example Pages
 
-<div class="example-grid">
-  <img src="/templates/examples/rpfo-ex-1.png" alt="Example — front" loading="lazy" />
-  <img src="/templates/examples/rpfo-ex-2.png" alt="Example — back" loading="lazy" />
+<div style="display:grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 1rem; align-items:start; justify-items:center;">
+  <img
+    src="/templates/examples/rpfo-ex-1.png"
+    alt="Research Paper Fill-In Template Example — Front"
+    style="width:100%; max-width:520px; height:auto; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,0.08); background:#fff;"
+    loading="lazy"
+  />
+  <img
+    src="/templates/examples/rpfo-ex-2.png"
+    alt="Research Paper Fill-In Template Example — Back"
+    style="width:100%; max-width:520px; height:auto; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,0.08); background:#fff;"
+    loading="lazy"
+  />
 </div>
-
-<style>
-  .example-grid {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 1rem;
-    justify-items: center;
-  }
-  .example-grid img {
-    width: 100%;
-    max-width: 520px;          /* keeps them tidy on huge screens */
-    height: auto;
-    border-radius: 12px;
-    box-shadow: 0 4px 16px rgba(0,0,0,.08);
-    background: #fff;
-  }
-  @media (min-width: 900px) {
-    .example-grid { grid-template-columns: 1fr 1fr; }
-  }
-</style>
 
 ---
 
