--- a/src/content/blog/research-paper-fill-in-template.mdx
+++ b/src/content/blog/research-paper-fill-in-template.mdx
@@ -5,7 +5,7 @@ pubDate: 2025-10-14
 draft: false
 tags: ["templates", "research", "workflow", "organization"]
 heroImage: "/templates/covers/research-template-cover.png"
-heroImageStyle: "max-height: 250px; width: 100%; object-fit: contain;"
+heroImageStyle: "max-height: 600px; width: auto; display: block; margin: 0 auto; object-fit: contain;"
 wide: true
 ---
 
