--- a/src/content/blog/research-paper-fill-in-template.mdx
+++ b/src/content/blog/research-paper-fill-in-template.mdx
@@ -39,6 +39,30 @@ Each box has a purpose — to help you extract *only what matters* from a paper,
 
 ---
 
+## 💡 Failed Predecessor: The Google Sheets Era
+
+Before the printable **Research Paper Fill-In Template** existed, I tried to digitize the same structure inside a massive Google Sheet — one column for *everything* from Abstracts to Variables to Figures.  
+It technically worked, but it quickly became an **information overload** problem:  
+- The more columns I added, the less I wanted to open it.  
+- Color-coding and alignment took forever.  
+- Reading across a row felt like scanning a barcode instead of understanding a paper.
+
+That version looked like this:
+
+<div style="display:flex; justify-content:center; margin: 2rem 0;">
+  <img
+    src="/templates/examples/failed-predecessor.png"
+    alt="Failed Google Sheets version of research paper breakdown"
+    style="width:100%; max-width:1200px; height:auto; border-radius:12px; box-shadow:0 4px 20px rgba(0,0,0,0.1); background:#fff;"
+    loading="lazy"
+  />
+</div>
+
+I eventually realized that **pen and paper** was faster, more flexible, and more memorable.  
+Now, that same structure lives on — just simplified, tactile, and actually *usable*.
+
+---
+
 ## 🧩 Template Overview
 
 Each page is structured around **information density** and **visual segmentation** — so every field contributes to a quick mental snapshot of the study.
