--- a/src/content/blog/original-to-do-list-template.mdx
+++ b/src/content/blog/original-to-do-list-template.mdx
@@ -11,6 +11,21 @@ wide: true
 
 ---
 
+## 🖋 Example Page
+
+<div style="display:grid; place-items:center; gap:1rem; margin:1rem 0;">
+  <img
+    src="/templates/examples/todo-example.png"
+    alt="Weekly To-Do List Template Example Page"
+    style="width:100%; max-width:640px; height:auto; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,0.08); background:#fff;"
+    loading="lazy"
+  />
+</div>
+
+---
+
+---
+
 ## 🗓️ What It Is
 
 The **Weekly To-Do List Template** is a simple yet powerful layout designed for tracking tasks across the week while keeping long-term projects and personal goals in sight.  
