--- a/src/content/blog/research-paper-fill-in-template.mdx
+++ b/src/content/blog/research-paper-fill-in-template.mdx
@@ -10,47 +10,22 @@ wide: true
 ---
 
 ---
-
 ## 🖋 Example Pages
 
-<div class="example-grid">
+<div style="display:flex; flex-direction:column; align-items:center; gap:1rem;">
   <img
     src="/templates/examples/rpfo-ex-1.png"
     alt="Research Paper Fill-In Template Example — Front"
     loading="lazy"
+    style="display:block; width:100%; max-width:520px; height:auto; margin:0 auto; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,.08); background:#fff;"
   />
   <img
     src="/templates/examples/rpfo-ex-2.png"
     alt="Research Paper Fill-In Template Example — Back"
     loading="lazy"
+    style="display:block; width:100%; max-width:520px; height:auto; margin:0 auto; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,.08); background:#fff;"
   />
 </div>
-
-<style>
-  /* Scoped to this post */
-  .example-grid {
-    display: grid;
-    grid-template-columns: 1fr;            /* 1-up on phones */
-    gap: 1rem;
-    justify-items: center;                 /* centers the grid items */
-  }
-  @media (min-width: 768px) {
-    .example-grid {
-      grid-template-columns: repeat(2, minmax(0, 1fr)); /* 2-up on tablet+ */
-    }
-  }
-  .example-grid img {
-    display: block;                        /* allows margin auto centering */
-    width: 100%;
-    max-width: 520px;                      /* caps size (looks like desktop) */
-    height: auto;
-    margin: 0 auto;                        /* centers within the grid cell */
-    border-radius: 12px;
-    box-shadow: 0 4px 16px rgba(0,0,0,0.08);
-    background: #fff;
-  }
-</style>
-
 ---
 
 ---
