--- a/src/content/blog/research-paper-fill-in-template.mdx
+++ b/src/content/blog/research-paper-fill-in-template.mdx
@@ -12,18 +12,45 @@ wide: true
 ---
 ## 🖋 Example Pages
 
-<div style="display:flex; flex-direction:column; align-items:center; gap:1rem;">
+<div
+  style="
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+  "
+>
   <img
     src="/templates/examples/rpfo-ex-1.png"
     alt="Research Paper Fill-In Template Example — Front"
     loading="lazy"
-    style="display:block; width:100%; max-width:520px; height:auto; margin:0 auto; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,.08); background:#fff;"
+    style="
+      display: block;
+      width: 100%;
+      max-width: 520px;
+      height: auto;
+      margin: 0 auto;
+      border-radius: 12px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+      background: #fff;
+      flex: 1 1 320px;
+    "
   />
   <img
     src="/templates/examples/rpfo-ex-2.png"
     alt="Research Paper Fill-In Template Example — Back"
     loading="lazy"
-    style="display:block; width:100%; max-width:520px; height:auto; margin:0 auto; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,.08); background:#fff;"
+    style="
+      display: block;
+      width: 100%;
+      max-width: 520px;
+      height: auto;
+      margin: 0 auto;
+      border-radius: 12px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+      background: #fff;
+      flex: 1 1 320px;
+    "
   />
 </div>
 ---
