--- a/src/content/blog/daily-snapshot.mdx
+++ b/src/content/blog/daily-snapshot.mdx
@@ -1,5 +1,5 @@
 ---
-title: "The Daily Snapshot — Summary of Any Day with Raw Data in Google Sheets"
+title: "The Daily Snapshot — Summary of Day's Raw Data in Google Sheets"
 pubDate: "2025-10-16"
 description: "How a single day in Google Sheets reflects years of structured data logging — from daily diaries and photos to automated summaries powered by Apps Script and ChatGPT."
 tags: ["LifeLoggerz", "Google Sheets", "Daily Snapshot", "Automation", "Self-Improvement"]
@@ -85,7 +85,7 @@ Even the **Photo of the Day** is automated: Google Drive links are parsed with a
 > *(Click the image below to learn more — coming soon!)*
 
 <a href="/blog/photo-a-day-automation" title="Coming Soon: Automating Photo-a-Day in Google Sheets">
-  <img src="/images/day-summary-diary-log.png" alt="Clickable teaser for Photo-A-Day project" style={{ borderRadius: '12px', marginTop: '1rem' }} />
+  <img src="/images/day-summary-diary-log.png" alt="Clickable teaser for Photo-A-Day project" style="border-radius:12px; margin-top:1rem;" />
 </a>
 
 ---
@@ -137,20 +137,9 @@ Each layer builds on the last — just like the data itself.
 </div>
 
 <style>
-  figure {
-    margin: 2rem 0;
-    text-align: center;
-  }
-  figcaption {
-    font-size: 0.9rem;
-    color: #555;
-    margin-top: 0.5rem;
-  }
-  img {
-    border-radius: 12px;
-    box-shadow: 0 10px 24px rgba(0,0,0,.12);
-    max-width: 100%;
-  }
+  figure { margin: 2rem 0; text-align: center; }
+  figcaption { font-size: 0.9rem; color: #555; margin-top: 0.5rem; }
+  img { border-radius: 12px; box-shadow: 0 10px 24px rgba(0,0,0,.12); max-width: 100%; }
   h2 { text-align: center; margin: 2rem 0 1rem; }
   blockquote { border-left: 4px solid #ddd; padding-left: 1rem; font-style: italic; color: #444; }
 
