--- a/src/content/blog/daily-snapshot.mdx
+++ b/src/content/blog/daily-snapshot.mdx
@@ -130,8 +130,8 @@ Each layer builds on the last — just like the data itself.
 
 ---
 
-<div class="post-nav">
-  <a class="btn-next" href="/blog/raw-data-sheets" aria-label="Next Post: Raw Data Sheets">
+<div className="post-nav">
+  <a className="btn-next" href="/blog/raw-data-sheets" aria-label="Next Post: Raw Data Sheets">
     Next Post → Raw Data Sheets
   </a>
 </div>
